--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;700&family=Kavoon&family=Rakkas&family=Roboto:wght@300;400;700&family=Shrikhand&family=Ultra&family=Yatra+One&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* 
+  IMPORTED FONTS
+  Fredoka
+  Kavoon
+  Rakkas
+  Roboto
+  Shirkhand
+  Ultra
+  Yatra One
+*/
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
