--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -4,6 +4,17 @@
     padding: 10px;
     display: flex;
     font-family: Fredoka, sans-serif;
+    /* animation: popUp 1s ease-in-out 0.5s 1 forwards; */
+}
+
+@keyframes popUp {
+    0% {
+        transform: scale(0);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
 
 .headerContainer {
